# core_prac_jinypark

./: .gitignore  CMakeLists.txt  GenerateProjectFiles.bat  GenerateProjectFiles.sh  Makefile  README.md  test.bat
Engine/: CMakeLists.txt
Engine/Config/: DefaultEngine.ini
Engine/Plugins/glad/: CMakeLists.txt
Engine/Plugins/glad/src/: glad.c
Engine/Plugins/glfw/: CMakeLists.txt
Engine/Plugins/glfw/src/: CMakeLists.txt
Engine/Plugins/glm/glm/: CMakeLists.txt
Templates/: CMakeLists.txt
Templates/boing/: CMakeLists.txt
Templates/gears/: CMakeLists.txt
Templates/heightmap/: CMakeLists.txt
Templates/offscreen/: CMakeLists.txt
Templates/particles/: CMakeLists.txt
Templates/sharing/: CMakeLists.txt
Templates/splitview/: CMakeLists.txt
Templates/triangle-opengl/: CMakeLists.txt
Templates/triangle-opengl/Config/: DefaultEngine.ini
Templates/triangle-opengles/: CMakeLists.txt  setup.bat
Templates/wave/: CMakeLists.txt
Templates/windows/: CMakeLists.txt  setup.bat
build_util/cmake/: FindGLFW3.cmake  FindGLM.cmake
chimera/: CMakeLists.txt
chimera/source/: main.cpp
core/glad/include/glad/: glad.h
source/: main.cpp
